Small refinements; coverage badge.

--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -7,7 +7,32 @@
     "id": "185e3716-4d8d-4f8e-ad03-0bb3ccaac41d"
    },
    "source": [
-    "# API BASICS"
+    "# API EXAMPLES FOR ``pySubnetSB``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "527b5470-a2f5-47f9-bbf7-635ea1195aab",
+   "metadata": {},
+   "source": [
+    "**Background**\n",
+    "\n",
+    "Many advances in biomedical research are driven by structural analysis, a study of the interconnections\n",
+    "between elements in biological systems (e.g., identifying drug target based on the structure of chemical pathways).\n",
+    "Structural analysis appeals because such information is generally much easier to obtain than dynamical data such as\n",
+    "species concentrations and reaction fluxes. Our focus is on subnet discovery in chemical reaction networks (CRNs);\n",
+    "that is, discovering a subset of a target CRN that is structurally identical to a reference CRN. Applications of subnet\n",
+    "discovery include the discovery of conserved chemical pathways and the elucidation of the structure of complex CRNs.\n",
+    "Although there are theoretical results for finding subgraphs, we are unaware of tools for CRN subnet discovery. This is\n",
+    "in part due to the special characteristics of CRN graphs, that they are directed, bipartite, hypergraphs.\n",
+    "\n",
+    "``pySubnetSB``\n",
+    "\n",
+    "``pySubnetSB`` is an open source Python package for discovering subnets represented in the systems\n",
+    "biology markup language (SBML) community standard. ``pySubnetSB`` uses a constraint-based approach to discover\n",
+    "subgraphs using techniques that work well for CRNs, and provides considerable speed-up through vectorization and\n",
+    "process-based parallelism. We provide a methodology for evaluating the statistical significance of subnet discovery, and\n",
+    "apply pySubnetSB to discovering subnets in more than 200,000 model pairs in the BioModels curated repository"
    ]
   },
   {
@@ -15,7 +40,7 @@
    "id": "d5de711e-4242-4e5a-82bc-02ff86226968",
    "metadata": {},
    "source": [
-    "This notebook demonstrates the API functions\n",
+    "This notebook demonstrates the API of ``pySubnetSB``. There are 3 functions.\n",
     "* ``findReferenceInTarget`` to do subnet discovery for a single reference model on a single target model\n",
     "* ``findReferencesInTargets`` to do subnet discovery with multiple reference models on multiple target models\n",
     "* ``makeSerializationFile`` to create a serialization file describing a collection of models\n",
@@ -39,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "b289d40f-44f5-4102-bba3-b6c0ec5fd820",
    "metadata": {
     "colab": {
@@ -53,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0.5\n"
+      "0.0.6\n"
      ]
     }
    ],
@@ -199,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 28324569977.57it/s]"
+      "ssignments: 100%|███████████| 8333330/8333330 [00:00<00:00, 35922424822.53it/s]"
      ]
     }
    ],
@@ -276,7 +301,7 @@
     {
      "data": {
       "text/plain": [
-       "5332946: 3 species, 2 reactions\n",
+       "217578: 3 species, 2 reactions\n",
        "  _J0: A -> B\n",
        "  _J1: B -> C"
       ]
@@ -379,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|██████████| 483927410/483927410 [00:33<00:00, 14241334.44it/s]\n"
+      "assignments: 100%|██████████| 483927410/483927410 [00:27<00:00, 17297194.25it/s]\n"
      ]
     }
    ],
@@ -452,7 +477,7 @@
     {
      "data": {
       "text/plain": [
-       "3522764: 4 species, 7 reactions\n",
+       "4501904: 4 species, 7 reactions\n",
        "  R_31: xFinal_2 -> xFinal_1\n",
        "  R_10:  -> xFinal_8\n",
        "  R_33: xFinal_1 + xFinal_8 + xFinal_2 -> xFinal_8 + xFinal_2\n",
@@ -519,8 +544,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|██████████| 2083330/2083330 [00:00<00:00, 10353221981.42it/s]\n",
-      "assignments: 100%|██████████| 2083330/2083330 [00:00<00:00, 6716463760.43it/s]\n"
+      "assignments: 100%|██████████| 2083330/2083330 [00:00<00:00, 9730645158.49it/s]\n",
+      "assignments: 100%|██████████| 2083330/2083330 [00:00<00:00, 3281306553.63it/s]\n"
      ]
     },
     {
@@ -536,7 +561,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ssignments: 100%|███████████| 2083330/2083330 [00:00<00:00, 10578836988.28it/s]"
+      "ssignments: 100%|████████████| 2083330/2083330 [00:00<00:00, 4777539285.03it/s]"
      ]
     },
     {
@@ -552,7 +577,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|███████████| 2500000/2500000 [00:00<00:00, 17022337662.34it/s]"
+      "\n",
+      "ssignments: 100%|███████████| 2500000/2500000 [00:00<00:00, 14894545454.55it/s]"
      ]
     },
     {
@@ -567,8 +593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "assignments: 100%|██████████| 2500000/2500000 [00:00<00:00, 13090836454.43it/s]\n"
+      "assignments: 100%|██████████| 2500000/2500000 [00:00<00:00, 9328967971.53it/s]\n"
      ]
     },
     {
@@ -583,7 +608,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "assignments: 100%|████████████| 2500000/2500000 [00:00<00:00, 9506582048.96it/s]"
+      "assignments: 100%|████████████| 2500000/2500000 [00:00<00:00, 8531944670.46it/s]"
      ]
     },
     {
@@ -602,7 +627,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "assignments: 100%|██████████| 1666660/1666660 [00:00<00:00, 7214116310.26it/s]\n"
      ]
     },
     {
@@ -610,13 +636,6 @@
      "output_type": "stream",
      "text": [
       "Found matching model: BIOMD0000000121 and BIOMD0000000960\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "assignments: 100%|██████████| 1666660/1666660 [00:00<00:00, 7281748650.67it/s]\n"
      ]
     }
    ],
@@ -683,7 +702,7 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000170</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>6028312: 6 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
+       "      <td>5633882: 6 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...</td>\n",
        "      <td>48</td>\n",
        "      <td>False</td>\n",
@@ -693,7 +712,7 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000228</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>644208: 6 species, 4 reactions\\n  pRB_phosphor...</td>\n",
+       "      <td>9052654: 6 species, 4 reactions\\n  pRB_phospho...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"pRB\", \"Mp\": \"pRBp\", \"...</td>\n",
        "      <td>240</td>\n",
        "      <td>False</td>\n",
@@ -703,7 +722,7 @@
        "      <td>BIOMD0000000031</td>\n",
        "      <td>BIOMD0000000354</td>\n",
        "      <td>BIOMD0000000031: 6 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>1877625: 6 species, 4 reactions\\n  JChannel: C...</td>\n",
+       "      <td>9736127: 6 species, 4 reactions\\n  JChannel: C...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"CaS\", \"Mp\": \"CaI\", \"M...</td>\n",
        "      <td>12</td>\n",
        "      <td>False</td>\n",
@@ -723,7 +742,7 @@
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000170</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>4981549: 5 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
+       "      <td>2386943: 5 species, 4 reactions\\n  BMAL1_nucle...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...</td>\n",
        "      <td>24</td>\n",
        "      <td>False</td>\n",
@@ -733,7 +752,7 @@
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000228</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>1136648: 5 species, 4 reactions\\n  pRB_phospho...</td>\n",
+       "      <td>8898625: 5 species, 4 reactions\\n  pRB_phospho...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"pRB\", \"Mp\": \"pRBp\", \"...</td>\n",
        "      <td>60</td>\n",
        "      <td>False</td>\n",
@@ -743,7 +762,7 @@
        "      <td>BIOMD0000000027</td>\n",
        "      <td>BIOMD0000000354</td>\n",
        "      <td>BIOMD0000000027: 5 species, 4 reactions\\n  v1:...</td>\n",
-       "      <td>152159: 5 species, 4 reactions\\n  JChannel: Ca...</td>\n",
+       "      <td>7403108: 5 species, 4 reactions\\n  JChannel: C...</td>\n",
        "      <td>{\"species_names\": {\"M\": \"CaS\", \"Mp\": \"CaI\", \"M...</td>\n",
        "      <td>12</td>\n",
        "      <td>False</td>\n",
@@ -793,7 +812,7 @@
        "      <td>BIOMD0000000121</td>\n",
        "      <td>BIOMD0000000960</td>\n",
        "      <td>BIOMD0000000121: 6 species, 5 reactions\\n  rea...</td>\n",
-       "      <td>3704474: 6 species, 5 reactions\\n  Susceptible...</td>\n",
+       "      <td>1284700: 6 species, 5 reactions\\n  Susceptible...</td>\n",
        "      <td>{\"species_names\": {\"c3\": \"Susceptible\", \"c2\": ...</td>\n",
        "      <td>6</td>\n",
        "      <td>False</td>\n",
@@ -832,18 +851,18 @@
        "11  BIOMD0000000121: 6 species, 5 reactions\\n  rea...   \n",
        "\n",
        "                                      induced_network  \\\n",
-       "0   6028312: 6 species, 4 reactions\\n  BMAL1_nucle...   \n",
-       "1   644208: 6 species, 4 reactions\\n  pRB_phosphor...   \n",
-       "2   1877625: 6 species, 4 reactions\\n  JChannel: C...   \n",
+       "0   5633882: 6 species, 4 reactions\\n  BMAL1_nucle...   \n",
+       "1   9052654: 6 species, 4 reactions\\n  pRB_phospho...   \n",
+       "2   9736127: 6 species, 4 reactions\\n  JChannel: C...   \n",
        "3                                                       \n",
-       "4   4981549: 5 species, 4 reactions\\n  BMAL1_nucle...   \n",
-       "5   1136648: 5 species, 4 reactions\\n  pRB_phospho...   \n",
-       "6   152159: 5 species, 4 reactions\\n  JChannel: Ca...   \n",
+       "4   2386943: 5 species, 4 reactions\\n  BMAL1_nucle...   \n",
+       "5   8898625: 5 species, 4 reactions\\n  pRB_phospho...   \n",
+       "6   7403108: 5 species, 4 reactions\\n  JChannel: C...   \n",
        "7                                                       \n",
        "8                                                       \n",
        "9                                                       \n",
        "10                                                      \n",
-       "11  3704474: 6 species, 5 reactions\\n  Susceptible...   \n",
+       "11  1284700: 6 species, 5 reactions\\n  Susceptible...   \n",
        "\n",
        "                                             name_dct num_assignment_pair  \\\n",
        "0   {\"species_names\": {\"M\": \"y5\", \"Mp\": \"y6\", \"Mpp...                  48   \n",
@@ -911,12 +930,12 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'pySubnetSB'...\n",
-      "remote: Enumerating objects: 3195, done.\u001b[K\n",
-      "remote: Counting objects: 100% (153/153), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (105/105), done.\u001b[K\n",
-      "remote: Total 3195 (delta 100), reused 85 (delta 47), pack-reused 3042 (from 2)\u001b[K\n",
-      "Receiving objects: 100% (3195/3195), 114.45 MiB | 17.30 MiB/s, done.\n",
-      "Resolving deltas: 100% (2311/2311), done.\n"
+      "remote: Enumerating objects: 3336, done.\u001b[K\n",
+      "remote: Counting objects: 100% (294/294), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (179/179), done.\u001b[K\n",
+      "remote: Total 3336 (delta 178), reused 185 (delta 86), pack-reused 3042 (from 2)\u001b[K\n",
+      "Receiving objects: 100% (3336/3336), 114.47 MiB | 15.35 MiB/s, done.\n",
+      "Resolving deltas: 100% (2389/2389), done.\n"
      ]
     }
    ],
@@ -949,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "0eab7fae-c402-4876-b4ee-bd53840e2e84",
    "metadata": {},
    "outputs": [
@@ -972,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "14f9e282-065f-445b-9941-e4768bb6da38",
    "metadata": {},
    "outputs": [],
