--- a/notebooks/plots_for_paper.ipynb
+++ b/notebooks/plots_for_paper.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "id": "1c2eb53e-de0d-4274-acdd-a9f54a8212a4",
    "metadata": {},
    "outputs": [],
@@ -1917,7 +1917,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 97,
+   "id": "45ecb0bd-126f-4293-8140-fc6b00447d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8702568: 5 species, 4 reactions\n",
+      "  pRB_phosphorylation: pRB -> pRBp\n",
+      "  pRBp_phosphorylation: pRBp -> pRBpp\n",
+      "  pRBpp_dephosphorylation: pRBpp -> pRBp\n",
+      "  pRBp_dephosphorylation: pRBp -> pRB\n"
+     ]
+    }
+   ],
+   "source": [
+    "def findTargets(reference_biomodel:str)->pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Prints the targets reference model\n",
+    "    \"\"\"\n",
+    "    ref_df = WEAK_DF\n",
+    "    sel = ref_df[cn.FINDER_REFERENCE_NAME] == reference_biomodel\n",
+    "    df = ref_df[sel][[cn.FINDER_TARGET_NAME, cn.FINDER_INDUCED_NETWORK]]\n",
+    "    df = df.reset_index()\n",
+    "    del df['index']\n",
+    "    return df\n",
+    "\n",
+    "# Tests\n",
+    "df = findTargets(\"BIOMD0000000027\")\n",
+    "print(df.loc[1, cn.FINDER_INDUCED_NETWORK])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "327a2de8-0d2a-460a-a687-420a8a3c6104",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    BIOMD0000000289\n",
+       "1    BIOMD0000000290\n",
+       "2    BIOMD0000000539\n",
+       "3    BIOMD0000000687\n",
+       "4    BIOMD0000000848\n",
+       "5    BIOMD0000000852\n",
+       "6    BIOMD0000001059\n",
+       "Name: target_name, dtype: object"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findTargets(\"BIOMD0000000519\")[\"target_name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "bf5eb4f2-ec9c-49d0-8538-818359810810",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sel = FULL_WEAK_DF[cn.FINDER_TARGET_NAME] == \"BIOMD0000000146\"\n",
+    "sel2 = np.logical_and(FULL_WEAK_DF[sel]['num_assignment_pair'].notna(), sel)\n",
+    "np.sum(sel2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "id": "abee53cf-ddaa-431a-ae60-6d5c4394b54a",
    "metadata": {},
    "outputs": [
@@ -1925,7 +2011,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of distinct networks: 34\n",
+      "Number of distinct networks: 93\n",
+      "\n",
+      "BIOMD0000000006: 4 species, 3 reactions\n",
+      "  Reaction1: EmptySet -> z\n",
+      "  Reaction2: u -> EmptySet\n",
+      "  Reaction3: z -> u\n",
+      "\n",
       "\n",
       "BIOMD0000000027: 5 species, 4 reactions\n",
       "  v1: M -> Mp\n",
@@ -1941,12 +2033,81 @@
       "  v4: Mp -> M\n",
       "\n",
       "\n",
-      "BIOMD0000000121: 6 species, 5 reactions\n",
-      "  reaction_0000001: c3 -> c2\n",
-      "  reaction_0000002: c2 -> c1\n",
-      "  reaction_0000003: c1 -> o\n",
-      "  reaction_0000004: o -> i\n",
-      "  reaction_0000005: c1 -> i\n",
+      "BIOMD0000000047: 2 species, 3 reactions\n",
+      "  Jch: CaER -> Ca_Cyt\n",
+      "  Jleak: CaER -> Ca_Cyt\n",
+      "  Jpump: Ca_Cyt -> CaER\n",
+      "\n",
+      "\n",
+      "BIOMD0000000060: 4 species, 3 reactions\n",
+      "  Closed_state_1: Po1 -> Pc1\n",
+      "  Open_state_2: Po1 -> Po2\n",
+      "  Closed_State_2: Po1 -> Pc2\n",
+      "\n",
+      "\n",
+      "BIOMD0000000076: 3 species, 2 reactions\n",
+      "  Gpd_p: DHAP -> G3P\n",
+      "  Gpp_p: G3P -> Gly\n",
+      "\n",
+      "\n",
+      "BIOMD0000000104: 6 species, 2 reactions\n",
+      "  reaction_0: species_0 -> species_1\n",
+      "  reaction_1: species_1 -> species_4\n",
+      "\n",
+      "\n",
+      "BIOMD0000000114: 2 species, 4 reactions\n",
+      "  reaction_0000001:  -> y\n",
+      "  reaction_0000002: x -> y\n",
+      "  reaction_0000003: y -> \n",
+      "  reaction_0000004: x -> y\n",
+      "\n",
+      "\n",
+      "BIOMD0000000115: 2 species, 5 reactions\n",
+      "  reaction_0000001:  -> y\n",
+      "  reaction_0000002: x -> y\n",
+      "  reaction_0000003: y -> x\n",
+      "  reaction_0000004: x -> y\n",
+      "  reaction_0000005: y -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000150: 4 species, 2 reactions\n",
+      "  Binding: CyclinA + Cdk2 -> CDK2cycA\n",
+      "  Activation: CDK2cycA -> CDK2cycA_star_\n",
+      "\n",
+      "\n",
+      "BIOMD0000000156: 3 species, 5 reactions\n",
+      "  R1:  -> x\n",
+      "  R3: x -> \n",
+      "  R4:  -> y0\n",
+      "  R5: y0 -> y\n",
+      "  R6: y -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000157: 3 species, 6 reactions\n",
+      "  R1:  -> x\n",
+      "  R2: x -> \n",
+      "  R3: x -> \n",
+      "  R4:  -> y0\n",
+      "  R5: y0 -> y\n",
+      "  R6: y -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000158: 3 species, 6 reactions\n",
+      "  R1:  -> x\n",
+      "  R2: x -> \n",
+      "  R3: x -> \n",
+      "  R4:  -> y0\n",
+      "  R5: y0 -> y\n",
+      "  R6: y -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000159: 3 species, 6 reactions\n",
+      "  R1:  -> x\n",
+      "  R2: x -> \n",
+      "  R3: x -> \n",
+      "  R4:  -> y0\n",
+      "  R5: y0 -> y\n",
+      "  R6: y -> \n",
       "\n",
       "\n",
       "BIOMD0000000178: 6 species, 4 reactions\n",
@@ -1956,6 +2117,20 @@
       "  bulk_movement: bulk -> free\n",
       "\n",
       "\n",
+      "BIOMD0000000191: 3 species, 5 reactions\n",
+      "  Arginase: ARGin -> ORN\n",
+      "  Arginine_transport: ARGex -> ARGin\n",
+      "  Ornithine_efflux: ORN -> \n",
+      "  NOS: ARGin -> \n",
+      "  ODC: ORN -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000194: 5 species, 3 reactions\n",
+      "  R6: Mad1_CMad2 + OMad2 -> Mad1_CMad2_OMad2\n",
+      "  R7: Mad1_CMad2_OMad2 + Cdc20 -> Mad1_CMad2 + Cdc20_CMad2\n",
+      "  R8: Cdc20_CMad2 -> OMad2 + Cdc20\n",
+      "\n",
+      "\n",
       "BIOMD0000000224: 4 species, 6 reactions\n",
       "  JChannel: CaS -> CaI\n",
       "  JPump: CaI -> CaS\n",
@@ -1963,6 +2138,30 @@
       "  kPhosphatase: IP3 -> \n",
       "  inhibition_parameter1:  -> g\n",
       "  inhibition_parameter2: g -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000225: 5 species, 3 reactions\n",
+      "  vgk: GLC -> G6P_F6P\n",
+      "  vpfk: G6P_F6P -> FBP\n",
+      "  vfba: FBP -> G3P\n",
+      "\n",
+      "\n",
+      "BIOMD0000000258: 3 species, 4 reactions\n",
+      "  v1: alpha -> beta\n",
+      "  v2: beta -> alpha\n",
+      "  v3: beta -> gamma\n",
+      "  v4: gamma -> beta\n",
+      "\n",
+      "\n",
+      "BIOMD0000000267: 4 species, 3 reactions\n",
+      "  endocytosis: bound -> translocate\n",
+      "  translocation: translocate -> lytic\n",
+      "  binding: free -> bound\n",
+      "\n",
+      "\n",
+      "BIOMD0000000283: 4 species, 2 reactions\n",
+      "  r1: X + E -> P\n",
+      "  r2: P -> E + Q\n",
       "\n",
       "\n",
       "BIOMD0000000307: 5 species, 5 reactions\n",
@@ -1997,16 +2196,13 @@
       "  r5: Ep -> E\n",
       "\n",
       "\n",
-      "BIOMD0000000322: 4 species, 9 reactions\n",
-      "  reaction_1: species_1 -> \n",
-      "  reaction_2: species_2 -> \n",
-      "  reaction_3: species_3 -> \n",
-      "  reaction_4: species_4 -> \n",
-      "  reaction_5: species_3 -> species_1 + species_3\n",
-      "  reaction_6: species_4 -> species_2 + species_4\n",
-      "  reaction_7: species_2 -> species_2 + species_3\n",
-      "  reaction_8: species_1 -> species_1 + species_4\n",
-      "  reaction_9: species_4 -> species_1 + species_4\n",
+      "BIOMD0000000321: 3 species, 6 reactions\n",
+      "  l_dopa_absorption: A_dopa -> C_dopa\n",
+      "  l_dopa_blood_hepa_clearance: A_dopa -> \n",
+      "  AADC_clearance: C_dopa -> \n",
+      "  COMT_clearance: C_dopa -> C_OMD\n",
+      "  rest_clearance: C_dopa -> \n",
+      "  _3_OMD_clearance: C_OMD -> \n",
       "\n",
       "\n",
       "BIOMD0000000363: 4 species, 4 reactions\n",
@@ -2014,6 +2210,73 @@
       "  r2: M -> IIa\n",
       "  r3: II -> P2\n",
       "  r4: P2 -> IIa\n",
+      "\n",
+      "\n",
+      "BIOMD0000000458: 7 species, 3 reactions\n",
+      "  PDH: p3g -> php\n",
+      "  PSA: php -> pser\n",
+      "  PSP: pser -> ser\n",
+      "\n",
+      "\n",
+      "BIOMD0000000459: 4 species, 3 reactions\n",
+      "  v1: IPTG -> sigb\n",
+      "  v2: sigb -> lacz\n",
+      "  v3: sigb -> x\n",
+      "\n",
+      "\n",
+      "BIOMD0000000460: 4 species, 3 reactions\n",
+      "  v1: IPTG -> sigb\n",
+      "  v2: sigb -> lacz\n",
+      "  v3: sigb -> x\n",
+      "\n",
+      "\n",
+      "BIOMD0000000461: 4 species, 3 reactions\n",
+      "  v1: IPTG -> sigb\n",
+      "  v2: sigb -> lacz\n",
+      "  v3: sigb -> x\n",
+      "\n",
+      "\n",
+      "BIOMD0000000484: 2 species, 2 reactions\n",
+      "  re2: ES -> S\n",
+      "  re12: S -> ES\n",
+      "\n",
+      "\n",
+      "BIOMD0000000486: 2 species, 2 reactions\n",
+      "  re2: B -> A\n",
+      "  re12: A -> B\n",
+      "\n",
+      "\n",
+      "BIOMD0000000519: 3 species, 7 reactions\n",
+      "  R0X: N0 -> \n",
+      "  R01: N0 -> N0 + N1\n",
+      "  R00: N0 -> 2.0 N0\n",
+      "  R1X: N1 -> \n",
+      "  R12: N1 -> N1 + N2\n",
+      "  R11: N1 -> 2.0 N1\n",
+      "  R2X: N2 -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000520: 3 species, 7 reactions\n",
+      "  R0X: N0 -> \n",
+      "  R01: N0 -> N0 + N1\n",
+      "  R00: N0 -> 2.0 N0\n",
+      "  R1X: N1 -> \n",
+      "  R12: N1 -> N1 + N2\n",
+      "  R11: N1 -> 2.0 N1\n",
+      "  R2X: N2 -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000546: 3 species, 5 reactions\n",
+      "  re1: s1 -> s2\n",
+      "  re3:  -> s1\n",
+      "  re5: s2 -> \n",
+      "  re6: s3 -> \n",
+      "  re7:  -> s3\n",
+      "\n",
+      "\n",
+      "BIOMD0000000629: 5 species, 2 reactions\n",
+      "  LR_complx: L + R -> LR\n",
+      "  LRCA_complx: LR + CA -> LRCA\n",
       "\n",
       "\n",
       "BIOMD0000000678: 4 species, 4 reactions\n",
@@ -2035,6 +2298,15 @@
       "  drug_decay: C -> \n",
       "\n",
       "\n",
+      "BIOMD0000000771: 3 species, 6 reactions\n",
+      "  Tumor_Growth:  -> y_Tumor_Cell\n",
+      "  Tumor_Cell_Infection: y_Tumor_Cell + v_Virus -> x_Infected_Cell\n",
+      "  Tumor_Cell_Fusion: y_Tumor_Cell -> \n",
+      "  Infected_Cell_Death: x_Infected_Cell -> \n",
+      "  Virus_Production_Infected_Cell:  -> v_Virus\n",
+      "  Virus_Elimination: v_Virus -> \n",
+      "\n",
+      "\n",
       "BIOMD0000000772: 4 species, 7 reactions\n",
       "  Uninfected_Cells_Proliferation:  -> x\n",
       "  Uninfected_Cells_Infection: x + y -> I\n",
@@ -2043,6 +2315,28 @@
       "  Immune_Kill: y -> \n",
       "  Stimulation:  -> z\n",
       "  Clearance: z -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000774: 2 species, 4 reactions\n",
+      "  stem_cell_division:  -> S\n",
+      "  de_differentiation: D -> S\n",
+      "  differentiation_of_cell:  -> D\n",
+      "  differentiated_cell_death: D -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000776: 2 species, 4 reactions\n",
+      "  sensitive_cell_growth:  -> S\n",
+      "  sensitive_cell_death: S -> \n",
+      "  resistance: S -> R\n",
+      "  resistant_cell_growth:  -> R\n",
+      "\n",
+      "\n",
+      "BIOMD0000000785: 2 species, 5 reactions\n",
+      "  Malignant_Cells_Growth:  -> x_Malignant_Cells\n",
+      "  Malignant_Cells_Death_Lymphocytes: x_Malignant_Cells -> y_Lymphocytes\n",
+      "  Lymphocytes_Production:  -> y_Lymphocytes\n",
+      "  Lymphocyte_Death: y_Lymphocytes -> \n",
+      "  Lymphocyte_Elimination_Malignant_Cells: y_Lymphocytes -> \n",
       "\n",
       "\n",
       "BIOMD0000000789: 4 species, 5 reactions\n",
@@ -2063,6 +2357,38 @@
       "  LSC_differentiation: L -> T\n",
       "  leukaemia_cell_efflux: T -> \n",
       "  immune_control: L -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000814: 3 species, 5 reactions\n",
+      "  Tumor_Cell_P_logistic_growth:  -> Tumor_Cell_Population_P\n",
+      "  Tumor_Cell_P_early_death: Tumor_Cell_Population_P -> Damaged_Tumor_Cells_D\n",
+      "  Tumor_Cell_P_delayed_death: Tumor_Cell_Population_P -> \n",
+      "  Damaged_Tumor_Cell_D_death: Damaged_Tumor_Cells_D -> \n",
+      "  Elimination_of_Chemotherapy: Drug_Concentration_C -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000825: 3 species, 4 reactions\n",
+      "  Transition_to_resistance: Sensitive_tumor_S -> Resistant_tumor_R\n",
+      "  growth_of_sensitive_tumor:  -> Sensitive_tumor_S\n",
+      "  growth_of_resistant_tumor:  -> Resistant_tumor_R\n",
+      "  drug_induced_death: Sensitive_tumor_S -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000845: 3 species, 7 reactions\n",
+      "  Susceptible_Logistic_Growth:  -> S\n",
+      "  Susceptible_Absorption_Virus: S + V_L -> I\n",
+      "  Susceptible_Death: S -> \n",
+      "  Infected_Death: I -> \n",
+      "  Infected_Lysis: I -> \n",
+      "  Virus_Lytic_Release_From_Infected:  -> V_L\n",
+      "  Virus_Lytic_Decay: V_L -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000850: 3 species, 4 reactions\n",
+      "  Tumor_Growth:  -> U\n",
+      "  Conversion_Uninfected_to_Infected: U -> I\n",
+      "  Tumor_Cell_Death: I -> V\n",
+      "  Viral_Decay: V -> \n",
       "\n",
       "\n",
       "BIOMD0000000854: 4 species, 7 reactions\n",
@@ -2142,6 +2468,23 @@
       "  The_synthesis_of_biomass_from_ammonia_and_glutamate:  -> B\n",
       "\n",
       "\n",
+      "BIOMD0000000957: 4 species, 3 reactions\n",
+      "  Susceptible_to_Infected: Susceptible -> Infected\n",
+      "  Infected_to_Recovered: Infected -> Recovered\n",
+      "  Infected_to_Confirmed: Infected -> Confirmed\n",
+      "\n",
+      "\n",
+      "BIOMD0000000962: 5 species, 3 reactions\n",
+      "  Susceptible_to_Unquarantined: Susceptible -> Unquarantined_Infected\n",
+      "  Unquarantined_to_Quarantined: Unquarantined_Infected -> Quarantined_Infected\n",
+      "  Quarantined_to_Confirmed: Quarantined_Infected -> Confirmed_Infected\n",
+      "\n",
+      "\n",
+      "BIOMD0000000963: 3 species, 2 reactions\n",
+      "  Susceptible_to_Infected: Susceptible -> Infected\n",
+      "  Infected_to_Recovered: Infected -> Recovered\n",
+      "\n",
+      "\n",
       "BIOMD0000000967: 4 species, 9 reactions\n",
       "  R_Death: R -> \n",
       "  R_Birth:  -> R\n",
@@ -2152,6 +2495,12 @@
       "  E_Death: E -> \n",
       "  V_Death: V -> \n",
       "  V_Creation:  -> V\n",
+      "\n",
+      "\n",
+      "BIOMD0000000970: 5 species, 3 reactions\n",
+      "  Susceptible_to_Exposed: Susceptible -> Exposed\n",
+      "  Exposed_to_Infected: Exposed -> Infected\n",
+      "  Infected_to_Recovered: Infected -> Recovered\n",
       "\n",
       "\n",
       "BIOMD0000000974: 6 species, 4 reactions\n",
@@ -2167,6 +2516,23 @@
       "  Infected_I1_to_Recovered: Infected_strong_immune_system -> Recovered\n",
       "  Infected_I2_to_Recovered: Infected_weak_immune_system -> Recovered\n",
       "  Infected_I2_to_Deceased: Infected_weak_immune_system -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000000978: 4 species, 3 reactions\n",
+      "  Susceptible_to_Exposed: Susceptible -> Exposed\n",
+      "  Exposed_to_Infected: Exposed -> Infected\n",
+      "  Infected_to_Recovered: Infected -> Recovered\n",
+      "\n",
+      "\n",
+      "BIOMD0000000982: 3 species, 2 reactions\n",
+      "  Susceptible_to_Infected: Susceptible -> Infected\n",
+      "  Infected_to_Removed: Infected -> Removed\n",
+      "\n",
+      "\n",
+      "BIOMD0000000984: 5 species, 3 reactions\n",
+      "  Susceptible_to_Exposed: Susceptible -> Exposed\n",
+      "  Exposed_to_Infected: Exposed -> Infected\n",
+      "  Infected_to_Recovered: Infected -> Recovered\n",
       "\n",
       "\n",
       "BIOMD0000001007: 4 species, 6 reactions\n",
@@ -2200,6 +2566,17 @@
       "  Factor_B_degradation: Factor_B -> \n",
       "\n",
       "\n",
+      "BIOMD0000001020: 3 species, 8 reactions\n",
+      "  R3_Cm_activation_into_Ct: Cm -> Ct\n",
+      "  R6_Ct_expansion:  -> Ct\n",
+      "  R4_Ct_natural_death: Ct -> \n",
+      "  R5_Ct_inhibiton_by_Tumor: Ct -> \n",
+      "  R1_Cm_formation:  -> Cm\n",
+      "  R2_Cm_death: Cm -> \n",
+      "  R7_Tumor_proliferation:  -> T\n",
+      "  R8_Tumor_death_by_Ct: T -> \n",
+      "\n",
+      "\n",
       "BIOMD0000001022: 4 species, 6 reactions\n",
       "  Tumor_growth:  -> T\n",
       "  T_cell_mediated_tumor_cell_killing: T -> \n",
@@ -2207,6 +2584,13 @@
       "  Intratumoral_T_cell_death: I -> \n",
       "  Lymph_node_resident_T_cell_conversion: N -> S\n",
       "  Effector_T_cell_proliferation:  -> S\n",
+      "\n",
+      "\n",
+      "BIOMD0000001031: 3 species, 4 reactions\n",
+      "  uninfected_cancer_cell_growth:  -> uninfected_cancer_cells\n",
+      "  cancer_cell_infection: uninfected_cancer_cells -> infected_cancer_cells\n",
+      "  infected_cancer_cell_lysis: infected_cancer_cells -> free_virus\n",
+      "  virus_infection_removal: free_virus -> \n",
       "\n",
       "\n",
       "BIOMD0000001034: 4 species, 7 reactions\n",
@@ -2239,6 +2623,28 @@
       "  virus_specific_CTL_expansion:  -> virus_specific_CTLs\n",
       "  virus_specific_CTLs_decay: virus_specific_CTLs -> \n",
       "\n",
+      "\n",
+      "BIOMD0000001045: 3 species, 2 reactions\n",
+      "  Susceptible_to_Infected: Susceptible -> Infected\n",
+      "  Infected_to_Recovered: Infected -> Recovered\n",
+      "\n",
+      "\n",
+      "BIOMD0000001048: 3 species, 6 reactions\n",
+      "  migration_to_bloodstream: Ttum -> Tplas\n",
+      "  clearance: Tplas -> \n",
+      "  cell_attachment_to_new_tumor:  -> Tnew\n",
+      "  new_tumor_auto_amplification:  -> Tnew\n",
+      "  old_tumor_auto_amplification:  -> Ttum\n",
+      "  cell_detachment: Tplas -> \n",
+      "\n",
+      "\n",
+      "BIOMD0000001056: 3 species, 5 reactions\n",
+      "  Proliferation_of_early_B_cells:  -> C1\n",
+      "  transition_from_early_B_cells_to_intermediate_B_cells: C1 -> C2\n",
+      "  Proliferation_of_intermediate_B_cells:  -> C2\n",
+      "  Transition_of_intermediate_B_cells_to_late_B_cells: C2 -> C3\n",
+      "  Blood_transition_of_late_B_cells: C3 -> \n",
+      "\n",
       "\n"
      ]
     }
@@ -2246,6 +2652,7 @@
    "source": [
     "# Print all of the reference models that appear in targets\n",
     "names = list(set(CONSTRAINED_STRONG_DF[cn.FINDER_REFERENCE_NAME]))\n",
+    "names = list(set(WEAK_DF[cn.FINDER_REFERENCE_NAME]))\n",
     "#names = list(set(STRONG_DF[cn.FINDER_REFERENCE_NAME]))\n",
     "names.sort()\n",
     "print(f\"Number of distinct networks: {len(names)}\\n\")\n",
