--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,1 @@
-1. Better repo
-2. Create jupyter example
-3. Create samples for command line
-4. Bug
-i/Users/jlheller/home/Technical/repos/pySubnetSB/src/pySubnetSB/identity_hash_benchmark.py:136: UserWarning:
-
-set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.
-
-
-Figures
-1. Example of subnet discovery. 1035 (ref), 351 (tgt), induced. assignment pair.
-2. Calculating a compatibility collection for the example and the assignment pairs.
-3. In-memory iteration of assignment pairs.
-
-Plots
-1. Script or notebook?
-2. Heatmaps for BioModels
-
-Data
-Data - mk_data
-1. Data in data/README.md
-2. Starts from full_biomodels<weak | strong>.csv, biomodels_serialized.txt, oscillators_serialized.txt
+1. Better repo - coverage bade
